added code for image to text

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /ImageToTextDemo/ImageToTextDemo/bin/Debug/netstandard2.0
+/ImageToTextDemo/ImageToTextDemo/obj
+/ImageToTextDemo/ImageToTextDemo.Android/bin/Debug
+/ImageToTextDemo/ImageToTextDemo.Android/obj
+/ImageToTextDemo/ImageToTextDemo.iOS/obj
