added Optional methods for api call

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /ImageToTextDemo/ImageToTextDemo.Android/bin/Debug
 /ImageToTextDemo/ImageToTextDemo.Android/obj
 /ImageToTextDemo/ImageToTextDemo.iOS/obj
+/.vs/ImageToTextDemo/v16
